--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,23 +2,29 @@
 pageable: true
 per_page: 10
 ---
-<% if paginate && num_pages > 1 %>
-  <p>Page <%= page_number %> of <%= num_pages %></p>
+<p>Freelance, full-stack developer building apps and products for startups and agencies. Based in Virginia. <a href='mailto:neil@descend.org'><span>Get in touch</span></a>.</p>
 
-  <% if prev_page %>
-    <p><%= link_to 'Previous page', prev_page %></p>
-  <% end %>
-<% end %>
+<ul>
+  <li>Github: <a target='_blank' href='http://github.com/neiltron'><span>neiltron</span></a></li>
+  <!-- <li>Blog: <a href='http://sofarswell.com' target='_blank'><span>SOFARSWELL</span></a></li> -->
+  <li>Twitter: <a target='_blank' class='twitter' href='http://twitter.com/realtron'><span>realtron</span></a></li>
+  <li>Resume: <a target='_blank' href='https://www.linkedin.com/pub/neil-pullman/26/a0a/9b3'><span>Linkedin</span></a></li>
+</ul>
 
-<% page_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
-  <!-- use article.summary(250) if you have Nokogiri available to show just
-       the first 250 characters -->
-  <%= article.body %>
-<% end %>
+<div id='posts'>
+  <h2>Recent Articles</h2>
+  <ol>
+    <% blog.articles[0...5].each do |article| %>
+      <li><a href='<%= article.url %>'><span><%= article.title %></span></a> <span> – <%= article.date.strftime('%b %Y') %></span></li>
+    <% end %>
+  </ol>
+</div>
 
-<% if paginate %>
-  <% if next_page %>
-    <p><%= link_to 'Next page', next_page %></p>
-  <% end %>
-<% end %>
+<div id='projects'>
+  <h2>Featured Work</h2>
+  <ol>
+    <li><a href='http://greatoakscharter.org' target='_blank'><span>Great Oaks Charter School</span></a> <span> – JUN 2015</span></li>
+    <li><a href='http://standardhotels.com' target='_blank'><span>Standard Hotels</span></a> <span> – JAN 2016</span></li>
+    <li><a href='http://mamouns.com' target='_blank'><span>Mamoun's Falafel</span></a> <span> – MAR 2016</span></li>
+  </ol>
+</div>
