only increase h2 font size on blog pages

--- a/source/layouts/blog_layout.erb
+++ b/source/layouts/blog_layout.erb
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <article>
+    <article class='blog'>
       <h1><a href='/'>DESCEND</a></h1>
 
       <% unless current_article.nil? %>
