--- a/source/stylesheets/_type.scss
+++ b/source/stylesheets/_type.scss
@@ -55,6 +55,7 @@ article {
 
   @include clearfix;
   margin-top: 4em;
+  margin-bottom: 4em;
   text-align: left;
   font-size: 1.2em;
   font-family: $serif;
